# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import observationsRouter from "./observations";
 import nabizRouter from "./nabiz";
 import missionsRouter from "./missions";
 import magnetometerRouter from "./magnetometer";
+import openrouterRouter from "./openrouter";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use(observationsRouter);
 router.use(nabizRouter);
 router.use(missionsRouter);
 router.use(magnetometerRouter);
+router.use(openrouterRouter);
 
 export default router;
